--- a/CapstoneNotebook.ipynb
+++ b/CapstoneNotebook.ipynb
@@ -6,9 +6,10 @@
     "collapsed": true
    },
    "source": [
-    "<center> <h1>Coursera Capstone</h1> </center>\n",
+    "<h1>Coursera Capstone</h1>\n",
     "<br>\n",
-    "<center> <h2>Hello Capstone Project Course!</h2> </center>\n",
+    "<h2>Hello Capstone Project Course!</h2>\n",
+    "\n",
     "\n"
    ]
   },
