--- a/IBM_Coursera_Capstone.ipynb
+++ b/IBM_Coursera_Capstone.ipynb
@@ -41,6 +41,30 @@
     "from sklearn.metrics import jaccard_similarity_score\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Capstone Project Course!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
